--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cross-Cultural Idiom Translator</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      body {
+        background: linear-gradient(135deg, #111827 0%, #1e293b 100%);
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
