--- a/index.html
+++ b/index.html
@@ -7,12 +7,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cross-Cultural Idiom Translator</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      body {
+        <style>
+      html, body {
         background: linear-gradient(135deg, #111827 0%, #1e293b 100%);
         margin: 0;
         padding: 0;
         min-height: 100vh;
+        background-size: cover;
+        background-repeat: no-repeat;
+        overflow-x: hidden;
+      }
+
+      #root {
+        background: linear-gradient(135deg, #111827 0%, #1e293b 100%);
+        min-height: 100vh;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      /* Ensure no white backgrounds anywhere */
+      body > * {
+        background: transparent;
+      }
+
+      /* Additional fixes for scroll behavior */
+      html {
+        scroll-behavior: smooth;
+      }
+
+      /* Prevent any default margins/padding that could cause white space */
+      html, body, div, p, h1, h2, h3, h4, h5, h6 {
+        margin: 0;
+        padding: 0;
+      }
+
+      /* Ensure the gradient extends beyond viewport */
+      html::before, body::before {
+        content: '';
+        position: fixed;
+        top: -50vh;
+        left: -50vw;
+        width: 200vw;
+        height: 200vh;
+        background: linear-gradient(135deg, #111827 0%, #1e293b 100%);
+        z-index: -1;
+        pointer-events: none;
       }
     </style>
   <script type="importmap">
